force overflow scroll on body, fix jumping content

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -37,6 +37,7 @@ body {
   font-size: var(--base-font-size);
   color: var(--black);
   margin: 0 auto;
+  overflow-y: scroll;
 
   &.__no-scroll {
     overflow: hidden;
